Issue #17425: activate UnusedCatchParameterShouldBeUnnamed for checkstyle project